<resources>
    <string name="app_name">My Closet</string>
    <string name="ID_text">Email</string>
    <string name="password_text">Password</string>
    <string name="sign_in_text">Sign in</string>
    <string name="sign_up_text">Sign up</string>
    <string name="Address_input_text">Put your video address</string>
    <string name="Done_button_text">DONE</string>
    <string name="image_description">item</string>

    <string name="short_sleeve_top">Short sleeve top</string>
    <string name="long_sleeve_top">Long sleeve top</string>
    <string name="short_sleeve_outwear">Short sleeve outwear</string>
    <string name="Sling_dress">Sling dress</string>
    <string name="Vest">Vest</string>
    <string name="Sling">Sling</string>
    <string name="Shorts">Shorts</string>
    <string name="Trousers">Trousers</string>
    <string name="Skirt">Skirt</string>
    <string name="Short_sleeve_dress">Short sleeve dress</string>
    <string name="Long_sleeve_dress">Long sleeve dress</string>
    <string name="Vest_dress">Vest dress</string>
    <string name="Long_sleeve_outwear">Long sleeve outwear</string>
</resources>