<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="150dp"
            android:layout_height="120dp"
            android:layout_gravity="center|center_vertical"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="40dp"
            app:srcCompat="@drawable/closet_logo"
            tools:layout_editor_absoluteX="153dp"
            tools:layout_editor_absoluteY="171dp" />

        <EditText
            android:id="@+id/Email_input"
            android:layout_width="@dimen/login_width"
            android:layout_height="@dimen/login_height"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/ID_text"
            android:inputType="textWebEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/Password_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/Password_input"
            android:layout_width="@dimen/login_width"
            android:layout_height="@dimen/login_height"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_in_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/sign_in_text"
                android:textAlignment="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/sign_up_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/roboto"
                android:gravity="center|center_horizontal"
                android:text="@string/sign_up_text"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/id_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

        <TextView
            android:id="@+id/link_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="Forget password?"
            android:textSize="14dip" />

    </LinearLayout>
</layout>

